--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -58,3 +58,13 @@ body {
   width: 380px;
   background-color: rgba(142, 197, 252, 0.8);
 }
+.more-btn {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  background-color: rgba(142, 197, 252, 0.8);
+  font-weight: 700;
+}
