--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 a {
   text-decoration: none;
   color: rgba(255, 69, 0, 0.8);
+}
+ul {
+  list-style-type: none;
 }
 
 body {
@@ -16,12 +20,35 @@ body {
     rgba(224, 195, 252, 0.5) 100%
   );
 }
+
+.container {
+  // width: 1200px;
+  // padding-left: 15px;
+  // padding-right: 15px;
+  // /* margin: 0 auto; */
+  // margin-left: auto;
+  // margin-right: auto;
+  width: 100%;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
 .news-wrap {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 15%;
-  margin-top: 30px;
+  //   margin-top: 30px;
 }
 .news-card {
   width: 350px;
@@ -61,10 +88,44 @@ body {
 .more-btn {
   display: block;
   margin: 0 auto;
-  margin-bottom: 30px;
+  //   margin-bottom: 30px;
   border: none;
   padding: 8px 15px;
   border-radius: 5px;
   background-color: rgba(142, 197, 252, 0.8);
   font-weight: 700;
+}
+.more-btn:hover {
+  padding: 10px 20px;
+  background-color: rgb(89, 161, 233);
+  cursor: pointer;
+}
+header {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+main {
+  padding-bottom: 30px;
+}
+.header-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-list {
+  display: flex;
+  margin: 0 auto;
+  //   justify-content: space-around;
+}
+.header-item {
+  margin-right: 30px;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  background-color: rgba(142, 197, 252, 0.8);
+  font-weight: 700;
+}
+.header-item:hover {
+  background-color: rgb(89, 161, 233);
+  cursor: pointer;
 }
