--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -129,3 +129,12 @@ main {
   background-color: rgb(89, 161, 233);
   cursor: pointer;
 }
+.hero {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin-bottom: 30px;
+}
+.hero-header {
+  text-align: center;
+  color: rgb(89, 161, 233);
+}
