--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,10 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: default;
 }
 a {
   text-decoration: none;
   color: rgba(255, 69, 0, 0.8);
+  cursor: pointer;
 }
 ul {
   list-style-type: none;
@@ -82,7 +84,6 @@ body {
 }
 
 .news-card:hover {
-  width: 380px;
   background-color: rgba(142, 197, 252, 0.8);
 }
 .more-btn {
@@ -115,6 +116,7 @@ main {
 .header-list {
   display: flex;
   margin: 0 auto;
+  // position: fixed;
   //   justify-content: space-around;
 }
 .header-item {
@@ -125,13 +127,16 @@ main {
   background-color: rgba(142, 197, 252, 0.8);
   font-weight: 700;
 }
+.header-item:last-child {
+  margin-right: 0;
+}
 .header-item:hover {
   background-color: rgb(89, 161, 233);
   cursor: pointer;
 }
 .hero {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 150px;
+  padding-bottom: 150px;
   margin-bottom: 30px;
 }
 .hero-header {
